# country-currency-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md
.sqlx/: query-2e50f7d687c094d1b3ef24fe54960820e2c2221ac2041090c302ec24ec0a09f2.json  query-54d3c88e7311362d4951a98bdb1e73c1014028f9ca4a7805bddf6e63341d0c97.json  query-9a70c22a49c4ca097c143e8df489e38b28398d439ceb1799c50cbae8a4bc2560.json  query-c03a4949acfeeb1464d31f55defe2b8d8b4fed38ec795c88ece96eb158db189c.json  query-c8c1ea15684a8f7b70f5d3b9493dfffe69b8657034cd564f464a0963ec07378d.json
migrations/: 20251024180519_create_countries_table.sql  20251024183241_fix_country_id_to_int.sql
src/: api.rs  main.rs
src/db/: pool.rs  repositories.rs
src/models/: country.rs  mod.rs  requests.rs  responses.rs  state.rs
src/routes/: countries.rs
src/utils/: clients.rs  config.rs  countries.rs  exchange.rs  image.rs  mod.rs  task.rs  tasks.rs
tests/: business_logic_test.rs  integration_test.rs
