[package]
name = "currency_exchange_api"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.100"
axum = "0.8.6"
bigdecimal = { version = "0.4.9", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
image = "0.25.8"
imageproc = "0.25.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "json", "bigdecimal"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }


[[bin]]
name = "currency_exchange_api"

[lib]
name = "currency_exchange_api"
path = "src/lib.rs"
